2005-03-25  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Fix PostInst creation of /Applications/Fink
	symlinks (patch by AIDA Shinra)

2005-03-23  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: Use the gcc* FAQ for all gcc* Homepages.

2005-03-23  Daniel Macks  <dmacks@netspace.org>

	* Shibs.pm: Scattered code cleanups.
	* Package.pm, Shlibs.pm: reduce Package/Shlibs differences.

2005-03-22  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm, Package.pm, Shlibs.pm: Fixed scoping of $SIG{INT}

2005-03-21  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Implemented 'ignore_INT' option for execute().
	* PkgVersion.pm: Added ignore_INT for all dpkg calls.

2005-03-18  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: Better sanity-check of user input to prompt_selection
	and prompt_boolean
	* Package.pm: Improved diagnostics when dup %f with different %e.
	
2005-03-14  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Fix prompt for CVS username.

2005-03-11  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm: fix double display of shlibs library reading

2005-03-11  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Fix warning when another process has removed buildlock

2005-03-10  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: Use opendir() for reading a dir.

2005-03-10  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: add a check for /Developer/SDK

2005-03-09  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: add a check for cups

2005-03-08  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Build all dpkg scripts concurrently in memeory
	instead of looking over them one at a time.

2005-03-08  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Package.pm: refactoring require_packages and forget_packages
	* Bootstrap.pm, Engine.pm, Selfupdate.pm: Removing calls to
	Fink::Shlibs->require_packages, Fink::Shlibs->forget_packages
