@@ -569,9 +569,13 @@ sub update_shlib_db {
 				sleep $wait;
 				if (! -f $lockfile) {
 					print STDERR " done.\n";
-					$shlibs = Storable::lock_retrieve($dbfile);
-					$shlib_db_outdated = 0;
-					return;
+					if ($writable_cache) {
+						# nearly-concurrent indexing run finished so
+						# just grab its results
+						$packages = Storable::lock_retrieve($dbfile);
+						$db_outdated = 0;
+						return;
+					}
 				}
 			}
 		}
