@@ -1,3 +1,8 @@
+2005-03-30  Daniel Macks  <dmacks@netspace.org>
+
+	* Package.pm, Shlibs.pm: only use concurrent-index-run results if
+	we have Storable
+
 2005-03-25  Daniel Macks  <dmacks@netspace.org>
 
 	* PkgVersion.pm: Fix PostInst creation of /Applications/Fink
